syntax = "proto3";

package sl;

// descriptor_tag = 0x48 (72)
message SLServiceDescriptorProto
{
    uint32  descriptor_tag      = 1;
    uint32  descriptor_length   = 2;

    uint32  service_type = 3;
    string  service_provider_name = 4;
    string  service_name = 5;
}

// descriptor_tag = 0x40 (64)
message SLNetworkNameDescriptorProto
{
    uint32  descriptor_tag      = 1;
    uint32  descriptor_length   = 2;

    string  network_name = 3;
}

// descriptor_tag = 0x41 (65)
message SLServiceListDescriptorProto
{
    uint32  descriptor_tag      = 1;
    uint32  descriptor_length   = 2;

    message ServiceProto
    {
        uint32 service_id = 1;
        uint32 service_type = 2;
    }

    repeated ServiceProto services = 3;
}

// descriptor_tag = 0x52 (82)
message SLStreamIdentifierDescriptorProto
{
    uint32  descriptor_tag      = 1;
    uint32  descriptor_length   = 2;

    uint32  component_tag = 3;
}

// descriptor_tag = 0x56 (86)
message SLTeletextDescriptorPageProto
{
    string iso_639_language_code = 1;
    uint32 teletext_type = 2;
    uint32 teletext_magazine_number = 3;
    uint32 teletext_page_number = 4;
}

// descriptor_tag = 0x58 (88)
message SLLocalTimeOffsetProto
{
    string country_code = 1;
    uint32 country_region_id = 2;
    uint32 local_time_offset_polarity = 3;
    uint32 local_time_offset = 4;
    uint64 time_of_change = 5;
    uint32 next_time_offset = 6;
}

message SLLocalTimeOffsetDescriptorProto
{
    repeated SLLocalTimeOffsetProto local_time_offset = 1;
}

message SLTeletextDescriptorProto
{
    uint32  descriptor_tag      = 1;
    uint32  descriptor_length   = 2;

    repeated SLTeletextDescriptorPageProto pages = 3;
}

// descriptor_tag = 0x4D (77)
message SLShortEventDescriptorProto
{
    uint32  descriptor_tag      = 1;
    uint32  descriptor_length   = 2;

    string iso_639_language_code    = 3;
    string event_name_char          = 4;
    string text_char                = 5;
}

// descriptor_tag = 0x4E (78)
message SLExtendedEventDescriptorProto
{
    uint32  descriptor_tag      = 1;
    uint32  descriptor_length   = 2;

    message ItemProto
    {
        string item_description_char = 1;
        string item_char = 2;
    }

    uint32 descriptor_number = 3;
    uint32 last_description_number = 4;
    string iso_639_language_code = 5;

    repeated ItemProto items = 6;

    string text_char = 7;
}

// descriptor_tag = 0x55 (85)
message SLParentalRatingDescriptorProto
{
    uint32  descriptor_tag      = 1;
    uint32  descriptor_length   = 2;

    message RatingProto
    {
        string country_code = 1;
        uint32 rating = 2;
    }

    repeated RatingProto ratings = 3;
}

// descriptor_tag = 0x83 (131)
message SLLogicalChannelDescriptionProto
{
    uint32  descriptor_tag   = 1;
    uint32  descriptor_length = 2;

    message LogicalChannelProto
    {
        uint32 service_id = 1;
        uint32 visible_service_flag = 2;
        uint32 logical_channel_number = 3;
    }

    repeated LogicalChannelProto logical_channels = 3;
}

// all unknown descriptors
message SLUnknownDescriptorProto
{
    uint32  descriptor_tag      = 1;
    uint32  descriptor_length   = 2;
}

message SLDescriptorProto
{
    uint32  descriptor_tag      = 1;
    uint32  descriptor_length   = 2;

    oneof data {
        SLUnknownDescriptorProto unknown_descriptor = 3;
        SLServiceDescriptorProto service_descriptor = 4;
        SLNetworkNameDescriptorProto network_name_descriptor = 5;
        SLStreamIdentifierDescriptorProto stream_identifier_descriptor = 6;
        SLTeletextDescriptorProto teletext_descriptor = 7;
        SLLocalTimeOffsetDescriptorProto local_time_offset_descriptor = 8;
        SLShortEventDescriptorProto short_event_descriptor = 9;
        SLExtendedEventDescriptorProto extended_event_descriptor = 10;
        SLParentalRatingDescriptorProto parental_rating_descriptor = 11;
        SLServiceListDescriptorProto service_list_descriptor = 12;
        SLLogicalChannelDescriptionProto logical_channel_descriptor = 13;
    }
}

message SLStreamMapProto
{
    uint32  stream_type             = 1;
    uint32  elementary_PID          = 2;

    repeated SLDescriptorProto descriptors = 3;
}

message SLPmtProto
{
    uint32  version_number          = 1;
    uint32  program_number          = 2;
    uint32  pid_pmt                 = 3;
    uint32  PCR_PID                 = 4;

    repeated    SLDescriptorProto         descriptors = 5;
    repeated    SLStreamMapProto         stream_map  = 6;
}

message SLProgramMapProto
{
    uint32  program_number    = 1;
    uint32  map_PID           = 2;
}

message SLPatProto
{
    uint32  version_number                          = 1;
    uint32  transport_stream_id                     = 2;
    repeated    SLProgramMapProto program_map    = 3;
}

message SLInputPatProto
{
    SLPatProto pat = 1;
    repeated SLPmtProto pmt = 2;
}

message SLSdtServiceProto
{
    uint32  service_id                      = 1;

    repeated    SLDescriptorProto descriptors = 2;
}

message SLSdtProto
{
    uint32  version_number          = 1;
    uint32  transport_stream_id     = 2;
    uint32  original_network_id     = 3;

    repeated    SLSdtServiceProto sds = 4;
}

message SLInputSdtProto
{
    SLSdtProto actual             = 1;
    SLSdtProto other              = 2;
}

message SLTotProto
{
    uint64 UTC_time                     = 1;

    repeated    SLDescriptorProto descriptors = 2;
}

message SLTdtProto
{
    uint64 UTC_time                     = 1;
}

message SLNitTransportStreamProto
{
    uint32  transport_stream_id         = 1;
    uint32  original_network_id         = 2;

    repeated    SLDescriptorProto descriptors = 3;
}

message SLNitProto
{
    uint32  version_number              = 1;
    uint32  network_id                  = 2;

    repeated    SLDescriptorProto descriptors = 3;
    repeated    SLNitTransportStreamProto transport_stream = 4;
}

message SLInputNitProto
{
    SLNitProto actual = 1;
    SLNitProto other  = 2;
}

message SLCatProto
{
    uint32  version_number = 1;

    repeated    SLDescriptorProto descriptors = 2;
}



// EIT
message SLEventInfoProto
{
    uint32 event_id                     = 1;
    uint64 start_time                   = 2;
    uint32 duration                     = 3;
    uint32 running_status               = 4;
    uint32 free_CA_mode                 = 5;

    repeated    SLDescriptorProto descriptors = 6;
}

message SLEitProto
{
    uint32 version_number           = 1;
    uint32 service_id               = 2;
    uint32 transport_stream_id      = 3;
    uint32 original_network_id      = 4;

    repeated    SLEventInfoProto event_info = 5;
}

message SLInputEitProto
{
    SLEitProto actual             = 1;
    SLEitProto actual_schedule    = 2;
    SLEitProto other              = 3;
    SLEitProto other_schedule     = 4;
}
//
